src/test/deca/syntax/invalid/test_synt26.deca
//Resultat:
//      Erreur syntaxique : ligne 2
{
x=1;;h
}
